Complete Palindroma (funziona anche con frase)

--- a/index.html
+++ b/index.html
@@ -8,8 +8,20 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <div class="p-5 text-center">
 
+        <h1>Validatore di parole palindrome</h1>
+
+        <div class="py-4">
+            <label for="data" id="data-label">Inserisci una parola</label>
+            <input type="text" id="data" name="data">
+        </div>
+
+        <button id="pInvia" class="btn btn-light my-4">Invia</button>
+
+        <div id="pEsito"></div>
+    </div>
+<hr>
     <script src="./JS/script.js"></script>
 </body>
 </html>
