--- a/Bonus/index.html
+++ b/Bonus/index.html
@@ -28,7 +28,7 @@
 
         <div class="py-4">
             <label for="num">Inserisci un numero</label>
-            <input type="num" id="num" name="num">
+            <input type="text" id="num" name="num">
         </div>
 
         <button id="pariInvia" class="btn btn-light my-4">Pari</button>
